--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,9 +4,7 @@
 
 <ul>
   <li><%= link_to "Edit", edit_article_path(@article) %></li>
-  <li><%= link_to "Destroy", article_path(@article),
-                  method: :delete,
-                  data: { confirm: "Are you sure?" } %></li>
+  <li><%= link_to "Destroy", article_path(@article),data:{turbo_method: :delete, turbo_confirm: 'Tem certeza?'}%></li>
   <li><%=link_to "Home",  'http://[::1]:3000' %></li>
 </ul>
 
